# intelligent-automl

./: .gitignore  LICENSE  MANIFEST.in  README.md  basic_usage.py  comprehensive_demo.py  how_to_use_simple.py  inteligent_test.py  pyproject.toml  quick_test.py  requirements.txt  setup.py  test_basic.py  test_fixed.py  test_suite.py  usage.py
examples/: advanced_pipeline.py  basic_usage.py  complete_framework_demo.py  real_world_datasets.py
intelligent_automl/: .gitignore  __init__.py  cli.py  complete_framework.py  pyproject.toml  version.py
intelligent_automl/automl_env/: pyvenv.cfg
intelligent_automl/automl_env/Scripts/: activate  activate.bat
intelligent_automl/core/: __init__.py  base.py  config.py  exceptions.py  types.py
intelligent_automl/data/: __init__.py  loaders.py  pipeline.py  preprocessors.py
intelligent_automl/intelligence/: __init__.py  pipeline_selector.py
intelligent_automl/models/: __init__.py  auto_trainer.py
intelligent_automl/utils/: logging.py  validation.py
